crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_rich_as_folder_as_source_dependency.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: "artifact_info[0].filename"
---
SDist(
    SDistFilename {
        distribution: PackageName {
            source: "rich",
            normalized: "rich",
        },
        version: Version {
            epoch: 0,
            release: [
                13,
                6,
                0,
            ],
            pre: None,
            post: None,
            dev: None,
            local: None,
        },
        format: Tar,
    },
)
