crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__build_wheel_and_with_clean_env_and_pass_env_variables.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: metadata
---
WheelCoreMetadata {
    name: PackageName {
        source: "env_package",
        normalized: "env-package",
    },
    version: Version {
        epoch: 0,
        release: [
            0,
            1,
        ],
        pre: None,
        post: None,
        dev: None,
        local: None,
    },
    metadata_version: MetadataVersion(
        Version {
            epoch: 0,
            release: [
                2,
                1,
            ],
            pre: None,
            post: None,
            dev: None,
            local: None,
        },
    ),
    requires_dist: [],
    requires_python: None,
    extras: {},
}
