crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__check_direct_url_json_for_local_wheel.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: json
---
DirectUrlJson {
    url: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    source: Dir {
        editable: None,
    },
}
